// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormErrorMessage Snapshot 1`] = `
.c0 {
  margin-top: var(--bezier-text-margin-top);
  margin-right: var(--bezier-text-margin-right);
  margin-bottom: var(--bezier-text-margin-bottom);
  margin-left: var(--bezier-text-margin-left);
  font-size: var(--bezier-text-font-size);
  font-style: var(--bezier-text-font-style);
  font-weight: var(--bezier-text-font-weight);
  line-height: var(--bezier-text-line-height);
  color: var(--bezier-text-font-color);
  -webkit-letter-spacing: var(--bezier-text-letter-spacing);
  -moz-letter-spacing: var(--bezier-text-letter-spacing);
  -ms-letter-spacing: var(--bezier-text-letter-spacing);
  letter-spacing: var(--bezier-text-letter-spacing);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c1 {
  display: block;
  text-align: left;
}

<p
  aria-live="polite"
  class="c0 c1"
  id="test"
  style="--bezier-text-font-size: 1.3rem; --bezier-text-line-height: 1.8rem; --bezier-text-letter-spacing: normal; --bezier-text-font-style: normal; --bezier-text-font-weight: normal; --bezier-text-font-color: var(--bgtxt-orange-normal); --bezier-text-margin-top: 0px; --bezier-text-margin-right: 0px; --bezier-text-margin-bottom: 0px; --bezier-text-margin-left: 0px;"
>
  Lorem ipsum
</p>
`;

exports[`FormHelperText Snapshot 1`] = `
.c0 {
  margin-top: var(--bezier-text-margin-top);
  margin-right: var(--bezier-text-margin-right);
  margin-bottom: var(--bezier-text-margin-bottom);
  margin-left: var(--bezier-text-margin-left);
  font-size: var(--bezier-text-font-size);
  font-style: var(--bezier-text-font-style);
  font-weight: var(--bezier-text-font-weight);
  line-height: var(--bezier-text-line-height);
  color: var(--bezier-text-font-color);
  -webkit-letter-spacing: var(--bezier-text-letter-spacing);
  -moz-letter-spacing: var(--bezier-text-letter-spacing);
  -ms-letter-spacing: var(--bezier-text-letter-spacing);
  letter-spacing: var(--bezier-text-letter-spacing);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: color;
  transition-property: color;
}

.c1 {
  display: block;
  text-align: left;
}

<p
  class="c0 c1"
  id="test"
  style="--bezier-text-font-size: 1.3rem; --bezier-text-line-height: 1.8rem; --bezier-text-letter-spacing: normal; --bezier-text-font-style: normal; --bezier-text-font-weight: normal; --bezier-text-font-color: var(--txt-black-dark); --bezier-text-margin-top: 0px; --bezier-text-margin-right: 0px; --bezier-text-margin-bottom: 0px; --bezier-text-margin-left: 0px;"
>
  Lorem ipsum
</p>
`;
